# little_steer

./: .gitignore  AGENTS.md  DESIGN.md  README.md  __init__.py  cli.py  little_steer_test.ipynb  probing.py  pyproject.toml  steering.py
1_generating/: README.md  RUN_DASHBOARD.md  backfill_generation_hash.py  check_generation_consistency.py  config.yaml  dashboard.py  fix_quality.py  generate_responses.py  pyproject.toml  reparse_existing.py
1_generating/safety_scoring/: README.md  backfill_labeled.py  score.py  stats.py
1_generating/templates/: dashboard.html
2_labeling/: README.md  taxonomy.json
2_labeling/2a_evolving/: README.md  data_loader.py  empty_both_runs.sh  gpt5mini_empty.sh  gpt5mini_runs.sh  gpt5mini_seeded.sh  labeler.py  model_profiles.py  overnight_runs.sh  phi_ministral_empty.sh  pyproject.toml  resume_unconverged.sh  run.py  sampling.py  serve.py  smoke_test.py  state.py  taxonomy.py  test_json.py  visualizer.py  wait_and_run.sh
2_labeling/2a_evolving/analysis/: label_evolution_learnings.md  overnight_runs_analysis.md
2_labeling/2a_evolving/seeds/: ai_safety.json  arxiv_paper.json
2_labeling/2a_evolving/static/: index.html
2_labeling/2b_sentence/: README.md  batch_label.py  batch_labelers.yaml  batch_poll.py  compare_api.yaml  compare_api_labelers.py  compare_labelers.py  compare_local.yaml  config.yaml  gemini-2.5-flash-lite.yaml  gemini-2.5-flash.yaml  gemini-3-flash-preview.yaml  gemini-3.1-flash-lite-preview.yaml  generate_iaa_work_order.py  gpt5.4.yaml  gpt52.yaml  gpt5mini.yaml  labelers.yaml  lmstudio.yaml  prompt.md  pyproject.toml  run.py  run_all.py  system_prompt.md  view_comparison.py  work_order_iaa.json
2_labeling/2b_sentence/human_labeling/: README.md  package-lock.json  package.json  vite.config.ts
2_labeling/2b_sentence/human_labeling/src/: App.tsx  store.ts  taxonomy.ts  types.ts
2_labeling/2b_sentence/human_labeling/src/components/: DataLoader.tsx  Labeler.tsx
2_labeling/2b_sentence/iaa/: app.py  compute.py  custom.css  iaa_notebook.py
2_labeling/2b_sentence/iaa/templates/: iaa.html
2_labeling/2b_sentence/sentence_labeler/: README.md  __init__.py  labeler.py  mapper.py  pipeline.py  run.py  schema.py  taxonomy_loader.py
2_labeling/2b_sentence/viewer/: README.md  app.py  data_loader.py
2_labeling/2b_sentence/viewer/static/: style.css
2_labeling/2b_sentence/viewer/templates/: base.html  entry.html  index.html  stats.html
2_labeling/2c_human_labeling/: README.md  package-lock.json  package.json  test-tunnel.sh  vite.config.ts
2_labeling/2c_human_labeling/src/: App.tsx  index.css  store.ts  taxonomy.ts  types.ts
2_labeling/2c_human_labeling/src/components/: AssessmentPanel.tsx  AssessmentScreen.tsx  DataLoader.tsx  GamificationModal.tsx  IdentityScreen.tsx  Labeler.tsx  StatsView.tsx
3_representations/: README.md  explore.py  pyproject.toml  showcase.ipynb  showcase.py  test_marimo.py
3_representations/little_steer/: __init__.py  k_steering.py  mlp_probe.py  persona.py  probing.py  scoring.py  session.py  steering.py
3_representations/little_steer/_internal/: __init__.py  forward.py  span_eval.py
3_representations/little_steer/data/: __init__.py  converter.py  tokenizer_utils.py
3_representations/little_steer/extraction/: __init__.py  config.py  extractor.py  pooling.py  result.py
3_representations/little_steer/models/: __init__.py  model.py  vram.py
3_representations/little_steer/vectors/: builder.py  methods.py  transforms.py
3_representations/little_steer/visualization/: __init__.py  layer_plots.py  probe_view.py  token_view.py
3_representations/scripts/: convert_dataset.py  full_run.py  make_multilayer_html.py  run_experiments.py  sweep_old.py
3_representations/tests/: test_dataset_health.py  test_extraction_poc.py  test_fix_quality.py  test_schema.py  test_span_eval.py  test_token_selection.py  test_transforms.py  test_vectors.py  test_viewer_data_loader.py  test_visualization.py
data/: README.md  __init__.py  converter.py  dataset_health.py  download_hf.py  export_hf.py  hf_README.md  migrate_to_canonical.py  pyproject.toml  tokenizer_utils.py
data/thesis_schema/: __init__.py  schema.py
extraction/: config.py  extractor.py  result.py
human_labeling/: index.html  package-lock.json
human_labeling/src/: App.tsx  index.css  taxonomy.ts
human_labeling/src/components/: AssessmentScreen.tsx  DataLoader.tsx  Labeler.tsx  StatsView.tsx
scripts/: convert_dataset.py  extract_full_cache.py  make_html.py  make_plots.py  sweep.py  visualize.py
tests/: __init__.py  test_extraction_poc.py  test_schema.py
vectors/: __init__.py  steering_vector.py
visualization/: __init__.py  layer_plots.py  token_view.py
