[project]
name = "little-steer"
version = "0.1.0"
description = "A library for steering vector extraction and creation from LLM activations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nnsight>=0.4.0",
    "nnterp>=0.1.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "transformers>=4.40.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["little_steer"]
