[project]
name = "little-steer"
version = "0.1.0"
description = "A library for steering vector extraction and creation from LLM activations"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "altair>=6.1.0",
    "kernels>=0.12.0",
    "marimo==0.23.5",
    "nbformat>=5.10.4",
    "polars>=1.40.1",
    "setuptools",
    "thesis-schema",
    "triton>=3.2.0",
]

[project.optional-dependencies]
ml = [
    "accelerate>=1.4.0",
    "causal-conv1d>=1.5.0",
    "flash-attn>=2.7.0",
    "flash-linear-attention<0.5.0",
    "nnsight>=0.6.3",
    "nnterp>=0.1.0",
    "sentencepiece>=0.2.0",
    "torch==2.6.0+cu124",
    "torchaudio==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "transformers>=4.49.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "matplotlib>=3.5.0",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
]

[tool.uv]
environments = ["sys_platform == 'linux' and python_version == '3.11'"]
extra-build-dependencies = { "flash-attn" = ["torch"] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
thesis-schema = { path = "../data" }
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["little_steer"]

[tool.marimo.runtime]
output_max_bytes = 20_000_000
