[project]
name = "thesis-schema"
version = "0.1.0"
description = "Shared data schema (ConversationEntry, AnnotatedSpan) for the thesis pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thesis_schema"]
