[project]
name = "thesis-schema"
version = "0.1.0"
description = "Shared data schema (ConversationEntry, AnnotatedSpan) for the thesis pipeline"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.0.0",
    "rich>=15.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thesis_schema"]
