[project]
name = "label-evolution"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "flask>=3.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
