[project]
name = "sentence-labeler"
version = "0.1.0"
description = "Sentence-level LLM labeler for reasoning traces"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "flask>=3.0",
    "thesis-schema",
    "rapidfuzz>=3.14.5",
    "anthropic>=0.96.0",
    "marimo>=0.23.2",
    "altair>=6.1.0",
    "polars>=1.40.1",
    "google-genai>=1.73.1",
]


[project.optional-dependencies]
# Install with: uv add anthropic "google-genai>=1.0.0"
batch = [
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
]

[tool.uv.sources]
thesis-schema = { path = "../../data" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
